--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     </parent>
     <groupId>cn.xiejx</groupId>
     <artifactId>exam-order</artifactId>
-    <version>1.0.0</version>
-    <name>exam-order</name>
-    <description>exam-order</description>
+    <version>1.0</version>
+    <name>考试编排系统</name>
+    <description>这个是一个用于职业技能操作考试的编排系统，由嘉兴市教育考试院出品。</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -75,6 +75,7 @@
     </dependencies>
 
     <build>
+        <finalName>${name}-${version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
