--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>cn.xiejx</groupId>
     <artifactId>exam-order</artifactId>
-    <version>1.4.3.2</version>
+    <version>1.5.0</version>
     <name>考试编排系统</name>
     <description>这个是一个用于职业技能操作考试的编排系统，由嘉兴市教育考试院出品。</description>
     <properties>
@@ -45,6 +45,11 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>20.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.sleepybear</groupId>
+            <artifactId>cacher</artifactId>
+            <version>1.0.4</version>
         </dependency>
 
         <dependency>
